# geojson-modelica-translator

./: .buildinfo  .coveragerc  .cspell.json  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CNAME  Dehardcode_list.txt  DistrictEnergySystemCHP.mo  Hardcoded_List.xlsx  LICENSE  LICENSE.md  Makefile  README.md  README.rst  authors.html  baseline_sys_params.json  changelog.html  compiling_with_spawn.md  debug_sys_params.py  developer_resources.html  ets_cooling_indirect.mo  genindex.html  getting_started.html  index.html  input_file_documentation.html  license.html  mkdocs.yml  objects.inv  old_requirements.txt  overview.html  py-modindex.html  pyproject.toml  requirements.txt  (+9 more)
.cspell/: custom-dictionary-workspace.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: build.yml  check-labels.yml  ci.yml  documentation.yml  documentation_site.yml  pypi_release.yml  release.yml
OMoutputFiles/output/: template.out
OMoutputFiles/spawn_district_cooling/: package.bak-mo
OMoutputFiles/spawn_district_heating/: package.bak-mo
OMoutputFiles/spawn_district_heating_and_cooling_systems/: package.order
OMoutputFiles/spawn_single/: package.bak-mo  package.order
_autosummary/: geojson_modelica_translator.cli.html  geojson_modelica_translator.cli.main.html  geojson_modelica_translator.cli.parse_args.html  geojson_modelica_translator.cli.run.html  geojson_modelica_translator.geojson.html  geojson_modelica_translator.geojson.schemas.Schemas.html  geojson_modelica_translator.geojson.schemas.html  geojson_modelica_translator.geojson.urbanopt_geojson.GeoJsonValidationError.html  geojson_modelica_translator.geojson.urbanopt_geojson.UrbanOptGeoJson.html  geojson_modelica_translator.geojson.urbanopt_geojson.UrbanOptLoad.html  geojson_modelica_translator.geojson.urbanopt_geojson.html  geojson_modelica_translator.geojson_modelica_translator.GeoJsonModelicaTranslator.html  geojson_modelica_translator.geojson_modelica_translator.LoadsList.html  geojson_modelica_translator.geojson_modelica_translator.ModelicaPackage.html  geojson_modelica_translator.geojson_modelica_translator.html  geojson_modelica_translator.html  geojson_modelica_translator.jinja_filters.html  geojson_modelica_translator.jinja_filters.strcat.html  geojson_modelica_translator.model_connectors.couplings.coupling.Coupling.html  geojson_modelica_translator.model_connectors.couplings.coupling.html  geojson_modelica_translator.model_connectors.couplings.diagram.Diagram.html  geojson_modelica_translator.model_connectors.couplings.diagram.DiagramIcon.html  geojson_modelica_translator.model_connectors.couplings.diagram.DiagramNode.html  geojson_modelica_translator.model_connectors.couplings.diagram.LoadIcon.html  geojson_modelica_translator.model_connectors.couplings.diagram.NetworkIcon.html  geojson_modelica_translator.model_connectors.couplings.diagram.NodePort.html  geojson_modelica_translator.model_connectors.couplings.diagram.html  geojson_modelica_translator.model_connectors.couplings.graph.CouplingGraph.html  geojson_modelica_translator.model_connectors.couplings.graph.html  geojson_modelica_translator.model_connectors.couplings.html  geojson_modelica_translator.model_connectors.couplings.utils.DiagramLine.html  geojson_modelica_translator.model_connectors.couplings.utils.DiagramTransformation.html  geojson_modelica_translator.model_connectors.couplings.utils.find_path_bfs.html  geojson_modelica_translator.model_connectors.couplings.utils.html  geojson_modelica_translator.model_connectors.couplings.utils.parse_diagram_command.html  geojson_modelica_translator.model_connectors.couplings.utils.parse_diagram_commands.html  geojson_modelica_translator.model_connectors.districts.district.District.html  geojson_modelica_translator.model_connectors.districts.district.html  geojson_modelica_translator.model_connectors.districts.district.render_template.html  geojson_modelica_translator.model_connectors.districts.html  (+77 more)
_sources/: developer_resources.rst.txt  getting_started.rst.txt  overview.rst.txt
_sources/_autosummary/: geojson_modelica_translator.geojson.rst.txt  geojson_modelica_translator.geojson.urbanopt_geojson.GeoJsonValidationError.rst.txt  geojson_modelica_translator.geojson.urbanopt_geojson.rst.txt  geojson_modelica_translator.geojson_modelica_translator.GeoJsonModelicaTranslator.rst.txt  geojson_modelica_translator.geojson_modelica_translator.ModelicaPackage.rst.txt  geojson_modelica_translator.jinja_filters.rst.txt  (+94 more)
_static/: basic.css  classic.css  custom_sphinx_styles.css  documentation_options.js
authors/: index.html
changelog/: index.html
developer_resources/: index.html
district_heating_and_cooling_systems/: DistrictEnergySystemCHP.mo  package.mo  package.order
docs/: authors.md  authors.rst  changelog.md  changelog.rst  conf.py  developer_resources.md  developer_resources.rst  docs_requirements.txt  getting_started.md  getting_started.rst  index.md  index.rst  input_file_documentation.md  input_file_documentation.rst  license.md  license.rst  overview.md  overview.rst  publish_docs.sh
geojson_modelica_translator/: cli.py  external_package_utils.py  geojson_modelica_translator.py  jinja_filters.py  results_ghp.py  scaffold.py  utils.py
getting_started/: index.html
heat_with_chp/: package.mo
input_file_documentation/: index.html
license/: index.html
management/: check_sys_params.py  format_modelica_files.py  uo_des.py  update_licenses.py  update_schemas.py
model_from_sdk/: package.mo
schema/: building_properties.md  district_system_properties.md  electrical_connector_properties.md  electrical_junction_properties.md  region_properties.md  site_properties.md  system_parameter_properties.md  thermal_connector_properties.md  thermal_junction_properties.md
search/: search_index.json
teaser_district_cooling/: package.bak-mo
tests/: base_test_case.py  conftest.py  context.py  test_scaffold.py  test_translator.py  test_translator_13buildings.py  test_utils.py
(+1543 files in other folders)
