[tool.poetry]
name = "geojson-modelica-translator"
version = "0.7.0"
description = "Package for converting GeoJSON to Modelica models for Urban Scale Analyses."
authors = ["URBANopt DES Team <nicholas.long@nrel.gov>"]
license = "BSD-4-Clause"

readme = "README.md"

homepage = "https://docs.urbanopt.net"
repository = "https://github.com/urbanopt/geojson-modelica-translator"
documentation = "https://docs.urbanopt.net/geojson-modelica-translator/"
keywords = ["URBANopt", "Modelica", "GeoJSON", "Physics-based Modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "management" },
    { include = "geojson_modelica_translator"}
]

[tool.poetry.dependencies]
# https://python-poetry.org/docs/dependency-specification/
# Urbanopt SDK requires Python 3.10 as of UOv0.9.0
python = ">=3.9, <3.13"
BuildingsPy = "4.0.0"
click = "^8.1"
geojson = "^3.1"
jinja2 = "3.1.2"
jsonpath-ng = "~1.6"
jsonschema = "~4.20"
modelica-builder = "^0.5.1"
# modelica-builder = { path = "../modelica-builder", develop = true }
# modelica-builder = { git = "https://github.com/urbanopt/modelica-builder.git", branch = "mblv10"}
pandas = "~2"
requests = "^2.28"
teaser = "0.7.5"
#teaser = { git = "https://github.com/urbanopt/TEASER.git", branch = "development"}

[tool.poetry.dev-dependencies]
coveralls = "~3.3"
# lock the rpds-py to 0.16.2 until we can update due to issue with Python 3.12.x
rpds-py = "0.16.2"
m2r2 = "^0.3.3.post2"
mypy = "^1.8"
pre-commit = "^3.8"
pytest = "^8.3"
pytest-cov = "^5.0"
# don't update sphinx right now
sphinx = "~7.2"
sphinx_rtd_theme = "~2.0"
sphinx-jsonschema = "~1.19"
syrupy = "~4.6"
toml = "~0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
uo_des = 'management.uo_des:cli'
format_modelica_files = 'management.format_modelica_files:fmt_modelica_files'
update_schemas = 'management.update_schemas:update_schemas'
check_sys_params = 'management.check_sys_params:check_sys_params'

[tool.pytest.ini_options]
# There is a bug/issue with pytest and click where the test tries to write to the
# log after the log file has been closed. This causes the test to fail. The --capture=no
# is a workaround for this issue for now see https://github.com/pytest-dev/pytest/issues/5502#issuecomment-1020761655.
addopts = "--capture=no"
log_cli = true
log_cli_level = "DEBUG"
markers = [
    "simulation: marks tests that run a simulation with docker/optimica (deselect with '-m \"not simulation\"'). All simulations now require MSL v4.",
    "compilation: marks tests that are for compiling a simulation with docker/optimica (deselect with '-m \"not compilation\"'). All simulations now require MSL v4.",
    "dymola: mark tests that are for running only in Dymola, which requires a local install and license (deselect with '-m \"not dymola\"').",
    "docker: mark tests that are for testing Docker (deselect with '-m \"not docker\"').",
]
