[tool.poetry]
name = "geojson-modelica-translator"
version = "0.13.0"
description = "Package for converting GeoJSON to Modelica models for urban scale analyses."
authors = ["URBANopt DES Team <nicholas.long@nlr.gov>"]
license = "BSD-4-Clause"

readme = "README.md"

homepage = "https://docs.urbanopt.net"
repository = "https://github.com/urbanopt/geojson-modelica-translator"
documentation = "https://docs.urbanopt.net/geojson-modelica-translator/"
keywords = ["URBANopt", "Modelica", "GeoJSON", "Physics-based Modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [
    { include = "management" },
    { include = "geojson_modelica_translator" },
]

[tool.poetry.dependencies]
# https://python-poetry.org/docs/dependency-specification/#version-constraints
python = ">=3.10, <3.14"
BuildingsPy = "^5.1"
# Keep click <8.2 for compatibility with SEED (see SEED's requirements)
click = "<8.2"
geojson = "^3.1"
jinja2 = "^3.1"
jsonpath-ng = "^1.6"
jsonschema = "^4.20"
modelica-builder = "^0.7.0"
# modelica-builder = { path = "../modelica-builder", develop = true }
# modelica-builder = { git = "https://github.com/urbanopt/modelica-builder.git", branch = "develop"}
pandas = "^2.0"
requests = "^2.28"
teaser = "1.3.1"
# teaser = { git = "https://github.com/RWTH-EBC/TEASER.git", branch = "development" }

[tool.poetry.group.dev.dependencies]
rpds-py = ">=0.22,<0.31"
mypy = "^1.17"
pre-commit = "^4.0"
pytest = ">=8.3,<10.0"
pytest-cov = ">=6,<8"
syrupy = ">=4.8,<6.0"
# documentation - these are used during development of docs, not deployment
markdown-include = "^0.8.1"
mkdocs-material = "^9.5"
mkdocs-schema-reader = "^0.11.1"
mkdocstrings-python = ">=1.12.2,<2.1.0"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
uo_des = 'management.uo_des:cli'
format_modelica_files = "management.format_modelica_files:format_modelica_files"
check_sys_params = 'management.check_sys_params:check_sys_params'

[tool.pytest.ini_options]
# There is a bug/issue with pytest and click where the test tries to write to the
# log after the log file has been closed. This causes the test to fail. The --capture=no
# is a workaround for this issue for now see https://github.com/pytest-dev/pytest/issues/5502#issuecomment-1020761655.
addopts = "--capture=no"
log_cli = true
log_cli_level = "DEBUG"
markers = [
    "simulation: marks tests that run a simulation with docker/optimica (deselect with '-m \"not simulation\"'). All simulations now require MSL v4.",
    "compilation: marks tests that are for compiling a simulation with docker/optimica (deselect with '-m \"not compilation\"'). All simulations now require MSL v4.",
    "dymola: mark tests that are for running only in Dymola, which requires a local install and license (deselect with '-m \"not dymola\"').",
    "docker: mark tests that are for testing Docker (deselect with '-m \"not docker\"').",
]
