# content of pytest.ini or tox.ini
# setup.cfg files should use [tool:pytest] section instead
[metadata]
description-file = README.rst

[tool:pytest]
addopts =
    # --cov geojson_modelica_translator --cov-report term-missing
    --verbose
    -s
norecursedirs =
    dist
    build
    modelica-buildings
    .tox
    src
    output
testpaths = tests

markers =
    simulation: marks tests that run a simulation with docker/jmodelica (deselect with '-m "not simulation"'). All simulations now require MSL v4.

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
;ignore = E501
exclude =
    .tox
    .eggs
    build
    modelica-buildings
    dist
    docs/conf.py

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[nosetests]
verbosity=1
detailed-errors=1
nologcapture=1
nocapture=1
logging-level=INFO
