# content of pytest.ini
# setup.cfg files should use [tool:pytest] section instead
[metadata]
description-file = README.rst

[tool:pytest]
addopts =
    --cov geojson_modelica_translator --cov-report term-missing
    --verbose
    -s
norecursedirs =
    dist
    build
    modelica-buildings
    src
    output
testpaths = tests

[build_sphinx]
source_dir = docs
build_dir = docs/_build
