# content of pytest.ini
# setup.cfg files should use [tool:pytest] section instead
[metadata]
description-file = README.md

[tool:pytest]
addopts =
    --cov geojson_modelica_translator --cov-report term-missing
    --verbose
    -s
norecursedirs =
    dist
    build
    modelica-buildings
    src
    output
testpaths = tests

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
;ignore = E501
exclude =
    .eggs
    build
    modelica-buildings
    dist
    docs/conf.py

[build_sphinx]
source_dir = docs
build_dir = docs/_build
